fix: always encode files in UTF-8
Fixes #111